# rpi-pico

./: .gitmodules  README.md
dslogic/: dsview_session_proj_blink_freertos.dsc
freertos/: FreeRTOSConfig.h
proj/: common_import.cmake
proj/ble_basic/: CMakeLists.txt  FreeRTOSConfig.h  ble_support.c  ble_support.h  btstack_config.h  main.c
proj/blink/: CMakeLists.txt  main.c
proj/blink_freertos/: CMakeLists.txt  main.c
proj/blink_freertos/jlink/: blink_freertos.jdebug  blink_freertos.jflash
proj/pio_pin_toggle/: CMakeLists.txt  FreeRTOSConfig.h  main.c  pin_toggle.pio
proj/support/: CMakeLists.txt
proj/support/debug/: debug_io.c
proj/support/include/: debug_io.h
scripts/: openocd_proc.cfg  setup_environment.sh
